testsuite/tests/parser/should_fail/ListTuplePunsFail5.script
:set -XNoListTuplePuns
:load ListTuplePunsFail5
